# nng

./: CMakeLists.txt  meson.build  meson_options.txt
.github/workflows/: coverage.yml  darwin.yml  linux.yml  sanitizer.yml  windows.yml
cmake/: NNGOptions.cmake
demo/: meson.build
demo/async/: meson.build
demo/freertos/: CMakeLists.txt  FreeRTOSConfig.h  build.sh  freertos_tasks_c_additions.h  main.c
demo/http_client/: meson.build
demo/raw/: meson.build
demo/reqrep/: meson.build
demo/rest/: meson.build
docs/man/: meson.build
include/nng/supplemental/http/: http.h
src/: meson.build
src/compat/nanomsg/: meson.build
src/core/: meson.build  platform.h  stream.c
src/platform/: CMakeLists.txt  meson.build
src/platform/common/: CMakeLists.txt  atomic.c
src/platform/freertos/: CMakeLists.txt  freertos_alloc.c  freertos_atomic.c  freertos_clock.c  freertos_debug.c  freertos_file.c  freertos_impl.h  freertos_pipe.c  freertos_random.c  freertos_thread.c
src/platform/posix/: CMakeLists.txt  meson.build  posix_errno.c  posix_pipe.c  posix_pollq.h  posix_pollq_poll.c  posix_sockaddr.c
src/platform/windows/: meson.build
src/sp/protocol/: meson.build
src/sp/protocol/bus0/: meson.build
src/sp/protocol/pair0/: meson.build
src/sp/protocol/pair1/: meson.build
src/sp/protocol/pipeline0/: meson.build
src/sp/protocol/pubsub0/: meson.build
src/sp/protocol/reqrep0/: meson.build
src/sp/protocol/survey0/: meson.build
src/sp/transport/: meson.build
src/sp/transport/inproc/: meson.build
src/sp/transport/ipc/: meson.build
src/sp/transport/tcp/: meson.build
src/sp/transport/tls/: meson.build
src/sp/transport/ws/: meson.build
src/sp/transport/zerotier/: meson.build
src/supplemental/base64/: meson.build
src/supplemental/http/: http_api.h  http_conn.c  http_public.c  http_server.c  meson.build
src/supplemental/sha1/: meson.build
src/supplemental/tls/: meson.build
src/supplemental/tls/mbedtls/: meson.build
src/supplemental/tls/wolfssl/: meson.build
src/supplemental/util/: meson.build
src/supplemental/websocket/: meson.build
src/testing/: meson.build
src/tools/nngcat/: meson.build
src/tools/perf/: meson.build
tests/: meson.build
