#
# Copyright 2021 Staysail Systems, Inc. <info@staysail.tech>
#
# This software is supplied under the terms of the MIT License, a
# copy of which should be located in the distribution where this
# file was obtained (LICENSE.txt).  A copy of the license may also be
# found online at https://opensource.org/licenses/MIT.
#

if nng_supp_http
  nng_lib_defs += 'NNG_SUPP_HTTP'

  nng_supp_srcs += files(
    'http_chunk.c',
    'http_client.c',
    'http_conn.c',
    'http_msg.c',
    'http_public.c',
    'http_schemes.c',
    'http_server.c'
  )
endif
